<resources>
    <string name="app_name">Stand</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_email">john@john.com</string>
    <string name="user_password">**********</string>
    <string name="register">Sign Me Up</string>
    <string name="signin">Continue</string>
    <string name="username">Username</string>
    <string name="minimum_password">Password too Short</string>
    <string name="auth_failed">Authntication Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment_one">Blank Fragment one</string>
    <string name="hello_blank_fragment_two">Fragment two</string>
    <string name="hello_blank_fragment_three">Fragment 3</string>
</resources>
